cluster/argocd/sources/rabbitmq/rabbitmq.yaml
apiVersion: v1 
kind: Namespace
metadata: 
  name: rabbitmq
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 3
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq
      containers:
      - name: rabbitmq
        image: rabbitmq:3.9-management
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4369
          name: discovery
        - containerPort: 5672
          name: amqp 
        resources:
          limits:
            memory: "700Mi"
            cpu: "0.5"
        volumeMounts:
        - name: data
          mountPath: /var/lib/longhorn/rabbitmq
          readOnly: false
        - name: config-file
          mountPath: /config/
        - name: plugins-file
          mountPath: /etc/rabbitmq/
      volumes:
      - name: config-file
        emptyDir: {}
      - name: plugins-file
        emptyDir: {}
      - name: config
        configMap:
          name: rabbitmq-config
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 300Mi
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 15672    
    name: management
  selector:
    app: rabbitmq
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq
spec:
  type: NodePort
  ports:  
  - protocol: TCP
    port: 5672
    nodePort: 32083
    targetPort: 5672
    name: amqp 
  selector:
    app: rabbitmq
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: rabbitmq-ingress
  namespace: rabbitmq
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-management
            port:
              number: 80
---
